--- a/scss/3.layout/_3.carousel.scss
+++ b/scss/3.layout/_3.carousel.scss
@@ -4,7 +4,6 @@
 
 .carousel {
     @include section-colors("carousel");
-    height: 550px;
 
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/carousel.jpg);              // Apply a 50% darken to the whole background
     @media (min-width: $breakpoint-md) {                                                                            // At screen width 992+
@@ -15,6 +14,7 @@
     text-align: center;
 
     .flex-container {
+        min-height: 550px;
         height: 100%;
         display: flex;
         flex-direction: column;
